--- a/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
+++ b/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
@@ -39,7 +39,7 @@
         <author role="translatorEng" ref="eft:person-320">Roger Espel Llima</author>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -75,7 +75,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-19T11:52:18.048Z" user="admin">19/06/2023 11:52:18</note>
+        <note type="lastUpdated" date-time="2023-06-26T11:28:19.015Z" user="admin">26/06/2023 11:28:19</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:05.962Z" user="line-tofte">3</note>
@@ -115,6 +115,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2023-06-19T07:55:24.081Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-19T07:55:24.081Z" user="sameer">First published version.</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-06-19T11:52:15.2Z" user="john">Various edits to intro and glossary.</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2023-06-26T11:28:16.157Z" user="andre">Glossary matching revised - activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1425,7 +1426,7 @@
             University of Chicago Press, 2021. </bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
             <gloss xml:id="UT22084-090-035-207" type="term" mode="match">
@@ -1439,16 +1440,13 @@
             </gloss>
           </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-090-035-208">
-              <term>uṣṇīṣa </term>
-              <term xml:lang="Bo-Ltn">gtsug tor </term>
-              <term xml:lang="bo">གཙུག་ཏོར།</term>
-              <term xml:lang="Sa-Ltn">uṣṇīṣa </term>
-            <term type="definition">One of the thirty-two signs of a great being. In its simplest
-              form it is a pointed shape to the head (like a turban), or more elaborately it is a
-              dome-shaped extension on the crown of the head, or even an invisible extension of infinite height. The
-                term may can be used to refer to a class of deities such as the <foreign xml:lang="Sa-Ltn" type="term">uṣṇiṣarājas</foreign> or <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣa­tathāgatas</foreign>.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-090-035-208" type="term" mode="match">
+                            <term>uṣṇīṣa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gtsug tor</term>
+                            <term xml:lang="bo" type="sourceAttested">གཙུག་ཏོར།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">uṣṇīṣa</term>
+                            <term type="definition">One of the thirty-two signs of a great being. In its simplest form it is a pointed shape to the head (like a turban), or more elaborately it is a dome-shaped extension on the crown of the head, or even an invisible extension of infinite height. The term may can be used to refer to a class of deities such as the <foreign xml:lang="Sa-Ltn" type="term">uṣṇiṣarājas</foreign> or <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣa­tathāgatas</foreign>.</term>
+                        </gloss>
                     </item>
           <item>
             <gloss xml:id="UT22084-090-035-209" type="term" mode="match">
@@ -1578,18 +1576,14 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-090-035-220" type="term" mode="match">
-              <term>piśāca</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">sha za</term>
-              <term xml:lang="bo" type="sourceAttested">ཤ་ཟ།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">piśāca</term>
-              <term type="definition">A class of nonhuman beings that are said to dwell in impure
-                and perilous places. They feed on impure things, including flesh, as reflected in
-                the Tibetan term <foreign xml:lang="Bo-Ltn">sha za</foreign>, “flesh eater.” They are often described as having an
-                unpleasant appearance, and at times appear with animal bodies. Some possess the
-                ability to enter the dead bodies of humans.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-220" type="term" mode="match">
+                            <term>piśāca</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">sha za</term>
+                            <term xml:lang="bo" type="sourceAttested">ཤ་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">piśāca</term>
+                            <term type="definition">A class of nonhuman beings that are said to dwell in impure and perilous places. They feed on impure things, including flesh, as reflected in the Tibetan term <foreign xml:lang="Bo-Ltn">sha za</foreign>, “flesh eater.” They are often described as having an unpleasant appearance, and at times appear with animal bodies. Some possess the ability to enter the dead bodies of humans.</term>
+                        </gloss>
+                    </item>
           <item>
                         <gloss xml:id="UT22084-090-035-221" type="term" mode="match">
                             <term>kaṭapūtana</term>
@@ -1686,33 +1680,23 @@
             </gloss>
           </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-090-035-230">
-              <term>ḍākinī</term>
-              <term xml:lang="Bo-Ltn">mkha’ ’gro ma </term>
-              <term xml:lang="bo">མཁའ་འགྲོ་མ།</term>
-              <term xml:lang="Sa-Ltn">ḍākinī</term>
-              <term type="definition">A class of powerful nonhuman female beings who play a variety
-                of roles in Indic literature in general and Buddhist literature specifically.
-                Essentially synonymous with yoginīs, ḍākinīs are liminal and often dangerous beings
-                who can be propitiated to acquire both mundane and transcendent spiritual
-                accomplishments. In the higher Buddhist tantras, ḍākinīs are often considered
-                embodiments of awakening and feature prominently in tantric maṇḍalas.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-090-035-230" type="term" mode="match">
+                            <term>ḍākinī</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">mkha’ ’gro ma</term>
+                            <term xml:lang="bo" type="sourceAttested">མཁའ་འགྲོ་མ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ḍākinī</term>
+                            <term type="definition">A class of powerful nonhuman female beings who play a variety of roles in Indic literature in general and Buddhist literature specifically. Essentially synonymous with yoginīs, ḍākinīs are liminal and often dangerous beings who can be propitiated to acquire both mundane and transcendent spiritual accomplishments. In the higher Buddhist tantras, ḍākinīs are often considered embodiments of awakening and feature prominently in tantric maṇḍalas.</term>
+                        </gloss>
                     </item>
           <item>
-            <gloss xml:id="UT22084-090-035-231" type="term" mode="match">
-              <term>gandharva</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
-              <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
-              <term type="definition">A class of generally benevolent nonhuman beings who inhabit
-                the skies, sometimes said to inhabit fantastic cities in the clouds, and more
-                specifically to dwell on the eastern slopes of Mount Meru, where they are under the
-                jurisdiction of the Great King Dhṛtarāṣṭra. They are most renowned as celestial
-                musicians who serve the gods. Gandharvas are said to live on fragrances in the
-                desire realm, hence the Tibetan translation <foreign xml:lang="Bo-Ltn">dri za</foreign>, meaning “scent eater.”</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-231" type="term" mode="match">
+                            <term>gandharva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">A class of generally benevolent nonhuman beings who inhabit the skies, sometimes said to inhabit fantastic cities in the clouds, and more specifically to dwell on the eastern slopes of Mount Meru, where they are under the jurisdiction of the Great King Dhṛtarāṣṭra. They are most renowned as celestial musicians who serve the gods. Gandharvas are said to live on fragrances in the desire realm, hence the Tibetan translation <foreign xml:lang="Bo-Ltn">dri za</foreign>, meaning “scent eater.”</term>
+                        </gloss>
+                    </item>
           <item>
                         <gloss type="term" xml:id="UT22084-090-035-232">
               <term>ṛṣi</term>
@@ -1737,20 +1721,14 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-090-035-234" type="term" mode="match">
-              <term>bhūta</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
-              <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term>
-              <term type="definition"> This term in its broadest sense can refer to any being,
-                whether human, animal, or nonhuman. However, it is often used to refer to a specific
-                class of nonhuman beings, akin to spirits, who haunt dangerous and wild places. They
-                are regularly mentioned alongside other nonhuman beings such as rākṣasas, piśācas,
-                and pretas, and are especially prominent in Buddhist tantras. Their leader is
-                traditionally regarded to be Rudra-Śiva (also known by the name Bhūta), thus bhūtas
-                are also common in Śaivism.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-234" type="term" mode="match">
+                            <term>bhūta</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
+                            <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term>
+                            <term type="definition"> This term in its broadest sense can refer to any being, whether human, animal, or nonhuman. However, it is often used to refer to a specific class of nonhuman beings, akin to spirits, who haunt dangerous and wild places. They are regularly mentioned alongside other nonhuman beings such as rākṣasas, piśācas, and pretas, and are especially prominent in Buddhist tantras. Their leader is traditionally regarded to be Rudra-Śiva (also known by the name Bhūta), thus bhūtas are also common in Śaivism.</term>
+                        </gloss>
+                    </item>
           <item>
                         <gloss type="term" xml:id="UT22084-090-035-235">
               <term>marut</term>
@@ -1782,15 +1760,14 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-090-035-238" type="term" mode="match">
-              <term>suparṇa</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’ lding</term>
-              <term xml:lang="bo" type="sourceAttested">ནམ་མཁའ་ལྡིང་།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">suparṇa</term>
-              <term type="definition">In Sanskrit, “good winged,” an alternate name for
-                garuḍas.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-238" type="term" mode="match">
+                            <term>suparṇa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’ lding</term>
+                            <term xml:lang="bo" type="sourceAttested">ནམ་མཁའ་ལྡིང་།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">suparṇa</term>
+                            <term type="definition">In Sanskrit, “good winged,” an alternate name for garuḍas.</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss xml:id="UT22084-090-035-239" type="term" mode="match">
               <term>yakṣa</term>
@@ -1804,31 +1781,23 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-090-035-240" type="term" mode="match">
-              <term>kumbhāṇḍa</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">grul bum</term>
-              <term xml:lang="bo" type="sourceAttested">གྲུལ་བུམ།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">kumbhāṇḍa</term>
-              <term type="definition">A class of beings subordinate to Virūḍhaka, one of the Four
-                Great Kings, associated with the southern direction. The name uses a play on the
-                word āṇḍa, which means “egg” but is also a euphemism for a testicle. Thus, they are
-                often depicted as having testicles as big as pots (from khumba, or “pot”). </term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-240" type="term" mode="match">
+                            <term>kumbhāṇḍa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">grul bum</term>
+                            <term xml:lang="bo" type="sourceAttested">གྲུལ་བུམ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">kumbhāṇḍa</term>
+                            <term type="definition">A class of beings subordinate to Virūḍhaka, one of the Four Great Kings, associated with the southern direction. The name uses a play on the word āṇḍa, which means “egg” but is also a euphemism for a testicle. Thus, they are often depicted as having testicles as big as pots (from khumba, or “pot”). </term>
+                        </gloss>
+                    </item>
           <item>
-            <gloss xml:id="UT22084-090-035-241" type="term" mode="match">
-              <term>pūtana</term>
-              <term xml:lang="Bo-Ltn" type="sourceAttested">srul po</term>
-              <term xml:lang="bo" type="sourceAttested">སྲུལ་པོ།</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified">pūtana</term>
-              <term type="definition">A class of disease-causing spirits associated with cemeteries
-                and dead bodies. The name probably derives from the Skt. <foreign xml:lang="Sa-Ltn">pūta</foreign>, “foul-smelling,” as
-                reflected also in the Tib. <foreign xml:lang="Bo-Ltn">srul po</foreign>. The morbid condition caused by the spirit shares
-                its name and comes in various forms, with symptoms such as fever, vomiting,
-                diarrhea, skin eruptions, and festering wounds, the latter possibly explaining the
-                association with bad smells.</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-090-035-241" type="term" mode="match">
+                            <term>pūtana</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">srul po</term>
+                            <term xml:lang="bo" type="sourceAttested">སྲུལ་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">pūtana</term>
+                            <term type="definition">A class of disease-causing spirits associated with cemeteries and dead bodies. The name probably derives from the Skt. <foreign xml:lang="Sa-Ltn">pūta</foreign>, “foul-smelling,” as reflected also in the Tib. <foreign xml:lang="Bo-Ltn">srul po</foreign>. The morbid condition caused by the spirit shares its name and comes in various forms, with symptoms such as fever, vomiting, diarrhea, skin eruptions, and festering wounds, the latter possibly explaining the association with bad smells.</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss xml:id="UT22084-090-035-242" type="term" mode="match">
               <term>apasmāra</term>
@@ -2115,20 +2084,12 @@
             </gloss>
           </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-090-035-269">
-              <term>abstinence</term>
-              <term xml:lang="Bo-Ltn">gnyen gnas </term>
-              <term xml:lang="bo">གཉེན་གནས།</term>
-              <term xml:lang="Sa-Ltn">upavāsa</term>
-              <term type="definition">As expressed in the Sanskrit and translated literally into
-                Tibetan, the term means “to dwell near.” The term comes from the older Vedic
-                traditions in which during full moon and new moon sacrifices, householders would
-                practice abstinence in various forms such as fasting and refraining from sexual
-                activity. These holy days were called <foreign xml:lang="Sa-Ltn" type="term">upavasatha</foreign> days because it was said that the gods who were the
-                recipients of these sacrifices would “dwell” (√<foreign xml:lang="Sa-Ltn" type="term">vas</foreign>) “near” (<foreign xml:lang="Sa-Ltn" type="term">upa</foreign>) the practitioners of these sacrifices. While sacrificial practices
-                were discarded by Buddhists, the framework of practicing fortnightly abstinence
-                evolved into the <foreign xml:lang="Sa-Ltn" type="term">poṣadha</foreign> observance, a term etymologically related to the term <foreign xml:lang="Sa-Ltn" type="term">upavasatha</foreign>.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-090-035-269" type="term" mode="match">
+                            <term>abstinence</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gnyen gnas</term>
+                            <term xml:lang="bo" type="sourceAttested">གཉེན་གནས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">upavāsa</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-090-035-270">
