--- a/translations/kangyur/translations/043-007_toh70-question_of_subahu.xml
+++ b/translations/kangyur/translations/043-007_toh70-question_of_subahu.xml
@@ -30,7 +30,7 @@
             <editor role="projectEditor" ref="contributors.xml#person-51">James Gentry</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.1.15 <date>2020</date>
+                <edition>v 1.1.16 <date>2023</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="1">
@@ -68,7 +68,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2023-01-18T17:01:06.488Z" user="celso">18/01/2023 17:01:06</note>
+            <note type="lastUpdated" date-time="2023-06-26T14:51:12.313Z" user="admin">26/06/2023 14:51:12</note>
             <note type="updated" update="translation-status" value="2.c" date-time="2019-05-20T16:20:49.651Z" user="konchog">2.c</note>
             <note type="updated" update="translation-status" value="2.b" date-time="2019-07-19T11:49:24.7Z" user="james">2.b</note>
             <note type="updated" update="translation-status" value="2.a" date-time="2019-07-19T16:28:45.352Z" user="john">2.a</note>
@@ -82,6 +82,7 @@
     <note type="updated" update="text-version" value="v 0.9.2" date-time="2020-06-20T18:15:51.95Z" user="john">v 0.9.2</note>
     <note type="updated" update="text-version" value="v 1.1.1" date-time="2020-06-22T09:34:41.826Z" user="john">First published version.</note>
     <note type="updated" update="translation-status" value="1" date-time="2020-06-22T09:34:41.826Z" user="john">First published version.</note>
+    <note type="updated" update="translation-status" value="1.a" date-time="2020-06-22T09:34:41.826Z" user="admin">Note added retrospectively based on date of status '1'</note>       
     <note type="updated" update="publication-date" value="2020-06-22" date-time="2020-06-22T09:34:41.826Z" user="john">First published version.</note>
     <note type="updated" update="text-version" value="v 1.1.2" date-time="2020-06-22T10:15:30.772Z" user="john">Edited two glossary entries.</note>
     <note type="updated" update="text-version" value="v 1.1.3" date-time="2020-06-26T17:49:50.291Z" user="celso">removed erroneous extra space in i.2</note>
@@ -92,7 +93,7 @@
     <note type="updated" update="text-version" value="1.1.8" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-01-04T21:09:51.953Z" user="laura">Updated colophon to Bandé</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2021-03-19T16:37:50.658Z" user="celso">typo in glossary</note>
-    <note type="updated" update="text-version" value="1.1.11" date-time="2021-06-25T17:07:29.163Z" user="john">Adjusted titles within introduction and added note.</note>    <note type="updated" update="text-version" value="1.1.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-07-10T18:27:25.222Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.1.11" date-time="2021-06-25T17:07:29.163Z" user="john">Adjusted titles within introduction and added note.</note>    <note type="updated" update="text-version" value="1.1.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-07-10T18:27:25.222Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.1.16" date-time="2023-06-26T14:51:09.453Z" user="celso">"Blissful One" to "Well-Gone One"</note>
             </notesStmt>
       </fileDesc>
    </teiHeader>
@@ -1686,7 +1687,7 @@
                <milestone unit="chunk" xml:id="UT22084-043-007-334"/>
                <lg tid="282">
                   <l>“I reverentially make infinite supplications</l>
-                  <l>To the blissful ones throughout all the world systems,</l>
+                  <l>To the well-gone ones throughout all the world systems,</l>
                   <l>So that they remain for every eon</l>
                   <l>Teaching the tranquil Dharma!</l>
                </lg>
