--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -4,21 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lhag bsam brtan pa'i le'u'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sthīrādhyāśaya­parivartasūtra / dṛdhādhyāśaya­parivartasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Chapter about Sthīrādhyāśa / Dṛdhādhyāśaya</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lhag pa'i bsam pa brtan pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśayaparivartanāmamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sthīrādhyāśaya­parivartasūtra / dṛdhādhyāśaya­parivartasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lhag bsam brtan pa'i le'u'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśaya­parivarta­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-            <author role="translatorEng" ref="contributors.xml#person-297">Michelle J. Sorenson</author>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśayaparivartanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lhag pa'i bsam pa brtan pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -34,9 +33,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-27T12:45:15.101Z" user="admin">27/04/2020 12:45:15</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:42:44.674Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-06-27T07:34:56.333Z" user="admin">27/06/2023 07:34:56</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:42:44.674Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-22T08:46:20.429Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-27T07:34:52.034Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-27T07:34:52.034Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
