--- a/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
+++ b/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
@@ -14,8 +14,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje ri rab chen po'i rtse mo'i khang pa brtsegs pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāvajrameru­śikharakūṭāgāra­dhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-095-006"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh751" type="text">
@@ -38,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:58.084Z" user="celso">23/09/2021 17:35:58</note>
+                <note type="lastUpdated" date-time="2023-06-27T08:18:25.188Z" user="admin">27/06/2023 08:18:25</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
