--- a/translations/kangyur/placeholders/096-007_toh758-the_practice_of_the_tantra_of_vajrasrnkhala.xml
+++ b/translations/kangyur/placeholders/096-007_toh758-the_practice_of_the_tantra_of_vajrasrnkhala.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma rdo rje lu gu rgyud ma'i rgyud kyi rtog pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavajraśṛṅkhalatantrakalpa</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-007"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh758" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:31:14 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-27T08:19:13.256Z" user="admin">27/06/2023 08:19:13</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:19:08.95Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
