--- a/translations/kangyur/placeholders/099-017_toh844-the_tantra_of_lokastotrapuja.xml
+++ b/translations/kangyur/placeholders/099-017_toh844-the_tantra_of_lokastotrapuja.xml
@@ -8,8 +8,13 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">lokastotrapūjakalpamūlatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Lokastotrapūja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-099-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh844" type="text">
@@ -23,7 +28,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:37:24 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-27T08:19:49.247Z" user="admin">27/06/2023 08:19:49</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:19:44.92Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:19:44.92Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
