--- a/translations/kangyur/translations/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/translations/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -38,7 +38,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -78,7 +78,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-16T12:11:14.715Z" user="admin">16/06/2023 12:11:14</note>
+                                <note type="lastUpdated" date-time="2023-06-27T08:59:53.26Z" user="admin">27/06/2023 08:59:53</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto
                                         (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto
@@ -124,6 +124,7 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-08T05:21:14.055Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-06-08T17:54:25.579Z" user="martina-cotter">Updated typo.</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-06-16T12:11:11.867Z" user="andre">Glossary matching revised- activated in CG</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-27T08:59:50.396Z" user="andre">Glossary minor edits</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -483,7 +484,7 @@
                                                 province, China, July 12–15, 2017.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-036-009-51">
@@ -566,26 +567,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-036-009-60">
-                                                  <term>Mañjuśrī</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">’jam
-                                                  dpal </term>
-                                                  <term xml:lang="bo">འཇམ་དཔལ།</term>
-                                                  <term type="attestedDictionary" xml:lang="Sa-Ltn" status="verified">mañjuśrī</term>
-                                                  <term type="definition">Here the bodhisattva
-                                                  Mañjuśrī, one
-                                                  of the eight “close sons” of the Buddha and the
-                                                  embodiment of wisdom, resides at a place called
-                                                  Mountain of Meadows. He is a major
-                                                          figure in the Mahāyāna sūtras, appearing often as
-                                                          an interlocutor of the Buddha. In his most
-                                                          well-known iconographic form, he is portrayed
-                                                          bearing the sword of wisdom in his right hand and
-                                                          a volume of the <title xml:lang="Sa-Ltn">Prajñā­pāramitā­sūtra</title> in his left. In
-                                                          addition to the epithet Kumārabhūta, which means
-                                                          “having a youthful form,” Mañjuśrī is also called
-                                                          Mañjughoṣa, Mañjusvara, and Pañcaśikha.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-036-009-60" type="person" mode="match">
+                            <term>Mañjuśrī</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">’jam dpal</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇམ་དཔལ།</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">mañjuśrī</term>
+                            <term type="definition">Here the bodhisattva Mañjuśrī resides at a place called Mountain of Meadows.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-036-009-61">
