--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.3 <date>2023</date>
+                <edition>v 1.1.4 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-19T13:10:48.196Z" user="admin">19/04/2023 13:10:48</note>
+        <note type="lastUpdated" date-time="2023-06-27T09:10:11.813Z" user="admin">27/06/2023 09:10:11</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -113,6 +113,7 @@
           <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:51:42.618Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.1.2" date-time="2023-04-17T07:51:42.618Z" user="sameer">Included in App v 3.0</note>
           <note type="updated" update="text-version" value="1.1.3" date-time="2023-04-19T13:10:45.303Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
+          <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-27T09:10:08.914Z" user="andre">Glossary entry with no instances removed</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1853,7 +1854,7 @@
           </table>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-072-010-676">
@@ -1870,7 +1871,7 @@
               <term>spirit</term>
               <term xml:lang="Bo-Ltn" status="verified">’byung po </term>
               <term xml:lang="bo">འབྱུང་པོ།</term>
-              <term xml:lang="Sa-Ltn" status="verified"> bhūta</term>
+              <term xml:lang="Sa-Ltn" status="verified">bhūta</term>
             </gloss>
                     </item>
           <item>
@@ -1897,7 +1898,7 @@
               <term>sage</term>
               <term xml:lang="Bo-Ltn" status="verified">drang srong </term>
               <term xml:lang="bo">དྲང་སྲོང་།</term>
-              <term xml:lang="Sa-Ltn" status="verified"> ṛṣi</term>
+              <term xml:lang="Sa-Ltn" status="verified">ṛṣi</term>
               <term type="definition">An ancient Indian spiritual title
                 especially for divinely inspired individuals credited with creating the foundations
                 for Indian culture.  </term>
@@ -2268,13 +2269,13 @@
                 realm of existence, i.e., a class of deities of the formless realm. (No equivalent of <foreign xml:lang="Sa-Ltn">upaga</foreign> in Tib.)</term>
             </gloss>
                     </item>
-          <item>
+          <!--NOT IN TEXT<item>
                         <gloss xml:id="UT22084-072-010-717" type="term" mode="marked">
                             <term>three worlds</term>
                             <term xml:lang="Sa-Ltn" status="verified">traidhātuka</term>
                             <term type="definition">The three worlds, or realms, of desire, form, and formlessness.</term>
                         </gloss>
-                    </item>
+                    </item>-->
           <item>
                         <gloss type="term" xml:id="UT22084-072-010-718">
               <term>arhat</term>
