--- a/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
+++ b/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
@@ -23,7 +23,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -65,7 +65,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-21T14:06:14.134Z" user="admin">21/06/2023 14:06:14</note>
+                                <note type="lastUpdated" date-time="2023-06-27T09:16:59.127Z" user="admin">27/06/2023 09:16:59</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:28:05.921Z" user="line-tofte">Auto
@@ -113,6 +113,7 @@
                             <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:04:15.304Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:04:15.304Z" user="sameer">Included in App v 3.1</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-21T14:06:11.298Z" user="john">Edited dhāraṇī.</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-06-27T09:16:56.285Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -371,7 +372,7 @@
                                                 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-089-003-56">
