--- a/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
+++ b/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
@@ -23,7 +23,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -65,7 +65,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-21T14:26:52.878Z" user="admin">21/06/2023 14:26:52</note>
+                                <note type="lastUpdated" date-time="2023-06-27T09:34:28.224Z" user="admin">27/06/2023 09:34:28</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:38:28.251Z" user="line-tofte">Auto
@@ -110,6 +110,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:18:33.47Z" user="sameer">1.0.2</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-19T11:32:25.603Z" user="celso">Fixed a cross link that was pointing to collab. instead of dist.</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-06-21T14:26:50.04Z" user="john">Edited dhāranī.</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2023-06-27T09:34:25.355Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -323,7 +324,7 @@
                                                 Translating the Words of the Buddha, 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                                                 <gloss type="term" xml:id="UT22084-089-006-42">
