--- a/translations/kangyur/translations/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
@@ -20,7 +20,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -53,7 +53,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T08:26:09.135Z" user="admin">17/04/2023 08:26:09</note>
+                                <note type="lastUpdated" date-time="2023-06-27T09:48:25.107Z" user="admin">27/06/2023 09:48:25</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:43:24.87Z" user="line-tofte">Auto
@@ -101,6 +101,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:19:48.779Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:26:04.826Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:26:04.826Z" user="sameer">Included in App v 3.1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-27T09:48:22.248Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -310,7 +311,7 @@
                                                 Words of the Buddha, 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-089-009-43">
