--- a/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -29,7 +29,7 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-04T14:57:22.35Z" user="admin">04/02/2023 14:57:22</note>
+        <note type="lastUpdated" date-time="2023-06-27T17:28:09.184Z" user="admin">27/06/2023 17:28:09</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
@@ -117,6 +117,7 @@
           <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-15T08:09:25.986Z" user="sameer">Included in App v 2.8</note>
           <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-02-04T14:57:19.511Z" user="john">Added line break spacers, and one minor edit to glossary.</note>
+          <note type="updated" update="text-version" value="1.0.7" date-time="2023-06-27T17:28:06.333Z" user="andre">Typo corrected in a definition</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1027,16 +1028,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-066-017-162">
-              <term>world system</term>
-              <term xml:lang="Bo-Ltn">’jig rten gyi khams </term>
-              <term xml:lang="bo">འཇིག་རྟེན་གྱི་ཁམས།</term>
-              <term xml:lang="Sa-Ltn">lokadhātu</term>
-              <term type="definition">Refers to any world or group of worlds illumined by one sun
-                and moon, its own Mount Meru, continents, desire, form, and formless realms,
-                etc.</term>
-              <term type="alternative"/>
-            </gloss>
+                        <gloss xml:id="UT22084-066-017-162" type="term" mode="match">
+                            <term>world system</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’jig rten gyi khams</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇིག་རྟེན་གྱི་ཁམས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">lokadhātu</term>
+                            <term type="definition">Refers to any world or group of worlds illumined by one sun and moon, with its own Mount Meru, continents, desire, form, and formless realms, etc.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-066-017-163">
@@ -1197,12 +1195,12 @@
               <term xml:lang="Bo-Ltn">lha ma yin </term>
               <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
               <term xml:lang="Sa-Ltn">asura</term>
-              <term type="definition">One of the six classes of sentient beings, asuras are
+              <!--<term type="definition">One of the six classes of sentient beings, asuras are
                 sometimes included among the gods and sometimes among the animals. They are
                 engendered and dominated by envy, ambition, and hostility and are metaphorically
                 described as being incessantly embroiled in disputes with the gods (<foreign xml:lang="Sa-Ltn" type="term">devas</foreign>). They are frequently portrayed in
                 brahmanical mythology as having a disruptive effect on cosmological and social
-                harmony.</term>
+                harmony.</term>-->
               <term type="alternative"/>
             </gloss>
                     </item>
