--- a/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
+++ b/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
@@ -15,10 +15,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāvajrameru­śikharakūṭāgāra­dhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-095-006"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-27T08:18:25.188Z" user="admin">27/06/2023 08:18:25</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-06-30T10:48:41.515Z" user="admin">30/06/2023 10:48:41</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-27T08:18:20.938Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-06-30T10:48:37.188Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-06-30T10:48:37.188Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
